# Renderizado-paralelo-MPI-OMP-CUDA

Proyectos/: CMakeLists.txt
Proyectos/CUDA/: CMakeLists.txt  Crystalline.cu  Crystalline.h  Diffuse.h  Metallic.cu  Metallic.h  Object.h  Scene.cu  Scene.h  Shape.h  Sphere.cu  Sphere.h  main.cu  raytracing.cu  raytracing.h  utils.cu  utils.h
Proyectos/MPI/: CMakeLists.txt  Crystalline.h  Object.h  Scene.cpp  Scene.h  main.cpp  random.cpp  random.h
Proyectos/MPIOMP/: CMakeLists.txt  Metallic.h  Sphere.cpp  main.cpp  raytracing
Proyectos/OMP/: CMakeLists.txt  CollisionData.h  Crystalline.cpp  Diffuse.h  Metallic.cpp  Scene.cpp  Scene1.txt  Shape.h  Sphere.h  main.cpp  utils.cpp
Resultados/CUDA/plotsCUDA/: estadisticas_avg_frame_time_por_height.csv  estadisticas_avg_frame_time_por_threadsX.csv  estadisticas_avg_frame_time_por_width.csv  estadisticas_timer_seconds_por_threadsX.csv  estadisticas_timer_seconds_por_threadsY.csv
Resultados/MPI/plotsMPI/: estadisticas_avg_frame_time_por_height.csv  estadisticas_avg_frame_time_por_width.csv  estadisticas_total_time_por_nFotogramas.csv  estadisticas_total_time_por_width.csv
Resultados/MPIOMP/: experimentos.csv
Resultados/MPIOMP/plotsMPIOMP/: estadisticas_avg_frame_time_por_height.csv  estadisticas_avg_frame_time_por_strategy.csv  estadisticas_avg_frame_time_por_width.csv  estadisticas_total_time_por_nFotogramas.csv  estadisticas_total_time_por_nProcs.csv  estadisticas_total_time_por_width.csv
Resultados/OMP/plotsOMP/: estadisticas_avg_frame_time_por_width.csv  estadisticas_total_time_por_nFotogramas.csv
